--- a/changelog.html
+++ b/changelog.html
@@ -7,10 +7,9 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <ul>
 <li>sticky-scroller for wiki side toc</li>
 <li>Language code pt, zh, zh-Hans, zh-Hant</li>
-<li>Buttons and inputs in dark background</li>
-<li>Application icons SVG</li>
-<li>Dark mode switch</li>
+<li>Dark mode</li>
 <li>Megamenu</li>
+<li>New icon set based on Remix Icon</li>
 </ul>
 <h3>Chagned</h3>
 <ul>
