breadcrumb dark mode

--- a/components.html
+++ b/components.html
@@ -2,7 +2,23 @@
 <a href="#">Link.</a></div><div class="alert alert-success">This is an alert.
 <a href="#">Link.</a></div><div class="alert alert-warning">This is an alert.
 <a href="#">Link.</a></div><div class="alert alert-danger">This is an alert.
-<a href="#">Link.</a></div><h2 id="buttons">Buttons</h2><p>Bootstrap provided several color variants of buttons. We don't recommend you
+<a href="#">Link.</a></div><h2>Breadcrumb</h2>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item"><a href="#">Library</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Data</li>
+  </ol>
+</nav>
+<pre><code class="language-html">&lt;nav aria-label=&quot;breadcrumb&quot;&gt;
+  &lt;ol class=&quot;breadcrumb&quot;&gt;
+    &lt;li class=&quot;breadcrumb-item&quot;&gt;&lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt;&lt;/li&gt;
+    &lt;li class=&quot;breadcrumb-item&quot;&gt;&lt;a href=&quot;#&quot;&gt;Library&lt;/a&gt;&lt;/li&gt;
+    &lt;li class=&quot;breadcrumb-item active&quot; aria-current=&quot;page&quot;&gt;Data&lt;/li&gt;
+  &lt;/ol&gt;
+&lt;/nav&gt;
+</code></pre>
+<h2 id="buttons">Buttons</h2><p>Bootstrap provided several color variants of buttons. We don't recommend you
 to use all of them. Instead, you should use as less variants as possible.</p><p>Only the following color variants are recommended:</p><h3 id="buttons-filled">Filled</h3><div class="my-3"><button class="btn btn-primary">Primary</button>
 <button class="btn btn-secondary">Secondary</button>
 <button class="btn btn-danger">Danger</button>
