--- a/components.html
+++ b/components.html
@@ -1,8 +1,38 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><title>Chameleon - openSUSE Design System for Web</title><link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"><link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"><link href="./dist/css/chameleon.css" rel="stylesheet"><link href="./lib/github.css" rel="stylesheet"><link href="./lib/doc.css" rel="stylesheet"></head><body class="d-flex flex-column" style="min-height:100vh;"><nav class="navbar navbar-expand-lg"><a class="navbar-brand" href="./"><svg class="icon icon-2x mr-2"><use xlink:href="#opensuse"></use></svg><span class="navbar-title">Chameleon</span></a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"><svg class="icon"><use xlink:href="#menu-2-line"></use></svg></button><div class="collapse navbar-collapse" id="navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="./get-started.html"><svg class="icon"><use xlink:href="#rocket-2-line"></use></svg>&nbsp;Get Started</a></li><li class="nav-item"><a class="nav-link" href="./elements.html"><svg class="icon"><use xlink:href="#stack-line"></use></svg>&nbsp;Elements</a></li><li class="nav-item"><a class="nav-link" href="./layouts.html"><svg class="icon"><use xlink:href="#layout-line"></use></svg>&nbsp;Layouts</a></li><li class="nav-item"><a class="nav-link" href="./components.html"><svg class="icon"><use xlink:href="#dashboard-line"></use></svg>&nbsp;Components</a></li><li class="nav-item"><a class="nav-link" href="./changelog.html"><svg class="icon"><use xlink:href="#clipboard-line"></use></svg>&nbsp;Changelog</a></li><li class="nav-item"><a class="nav-link" href="https://github.com/openSUSE/chameleon"><svg class="icon"><use xlink:href="#github-line"></use></svg>&nbsp;Source Code</a></li></ul></div></nav><div class="flex-fill py-5"><div class="container"><div class="row"><div class="col-lg-9 toc-scope"><h1>Components</h1><h2 id="alerts">Alerts</h2><p>You can only use four alert variants: info, success, warning, danger</p><div class="alert alert-info">This is an alert.
-<a href="#">Link.</a></div><div class="alert alert-success">This is an alert.
-<a href="#">Link.</a></div><div class="alert alert-warning">This is an alert.
-<a href="#">Link.</a></div><div class="alert alert-danger">This is an alert.
-<a href="#">Link.</a></div><h2>Breadcrumb</h2>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><title>Chameleon - openSUSE Design System for Web</title><link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"><link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"><link href="./dist/css/chameleon.css" rel="stylesheet"><link href="./lib/github.css" rel="stylesheet"><link href="./lib/doc.css" rel="stylesheet"></head><body class="d-flex flex-column" style="min-height:100vh;"><nav class="navbar navbar-expand-lg"><a class="navbar-brand" href="./"><svg class="icon icon-2x mr-2"><use xlink:href="#opensuse"></use></svg><span class="navbar-title">Chameleon</span></a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"><svg class="icon"><use xlink:href="#menu-2-line"></use></svg></button><div class="collapse navbar-collapse" id="navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="./get-started.html"><svg class="icon"><use xlink:href="#rocket-2-line"></use></svg>&nbsp;Get Started</a></li><li class="nav-item"><a class="nav-link" href="./elements.html"><svg class="icon"><use xlink:href="#stack-line"></use></svg>&nbsp;Elements</a></li><li class="nav-item"><a class="nav-link" href="./layouts.html"><svg class="icon"><use xlink:href="#layout-line"></use></svg>&nbsp;Layouts</a></li><li class="nav-item"><a class="nav-link" href="./components.html"><svg class="icon"><use xlink:href="#dashboard-line"></use></svg>&nbsp;Components</a></li><li class="nav-item"><a class="nav-link" href="./changelog.html"><svg class="icon"><use xlink:href="#clipboard-line"></use></svg>&nbsp;Changelog</a></li><li class="nav-item"><a class="nav-link" href="https://github.com/openSUSE/chameleon"><svg class="icon"><use xlink:href="#github-line"></use></svg>&nbsp;Source Code</a></li></ul></div></nav><div class="flex-fill py-5"><div class="container"><div class="row"><div class="col-lg-9 toc-scope"><h1>Components</h1><h2>Alerts</h2>
+<div class="alert alert-success" role="alert">
+  A simple success alert with <a href="#" class="alert-link">an example link</a>
+</div>
+<div class="alert alert-danger" role="alert">
+  A simple danger alert with <a href="#" class="alert-link">an example link</a>
+</div>
+<div class="alert alert-warning" role="alert">
+  <div class="alert-heading h5 mb-0">Alert Title</div>
+  A simple warning alert with <a href="#" class="alert-link">an example link</a>
+</div>
+<div class="alert alert-info alert-dismissible fade show" role="alert">
+  A simple info alert with <a href="#" class="alert-link">an example link</a>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<pre><code class="language-html">&lt;div class=&quot;alert alert-success&quot; role=&quot;alert&quot;&gt;
+  A simple success alert with &lt;a href=&quot;#&quot; class=&quot;alert-link&quot;&gt;an example link&lt;/a&gt;
+&lt;/div&gt;
+&lt;div class=&quot;alert alert-danger&quot; role=&quot;alert&quot;&gt;
+  A simple danger alert with &lt;a href=&quot;#&quot; class=&quot;alert-link&quot;&gt;an example link&lt;/a&gt;
+&lt;/div&gt;
+&lt;div class=&quot;alert alert-warning&quot; role=&quot;alert&quot;&gt;
+  &lt;h5 class=&quot;alert-heading mb-0&quot;&gt;Alert Title&lt;/h5&gt;
+  A simple warning alert with &lt;a href=&quot;#&quot; class=&quot;alert-link&quot;&gt;an example link&lt;/a&gt;
+&lt;/div&gt;
+&lt;div class=&quot;alert alert-info alert-dismissible fade show&quot; role=&quot;alert&quot;&gt;
+  A simple info alert with &lt;a href=&quot;#&quot; class=&quot;alert-link&quot;&gt;an example link&lt;/a&gt;
+  &lt;button type=&quot;button&quot; class=&quot;close&quot; data-dismiss=&quot;alert&quot; aria-label=&quot;Close&quot;&gt;
+    &lt;span aria-hidden=&quot;true&quot;&gt;&amp;times;&lt;/span&gt;
+  &lt;/button&gt;
+&lt;/div&gt;
+</code></pre>
+<h2>Breadcrumbs</h2>
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="#">Home</a></li>
