footer dark color

--- a/changelog.html
+++ b/changelog.html
@@ -81,4 +81,4 @@ needed.</li>
 <li>Brazilian Portuguese translation from openSUSE contributors.</li>
 <li>Detailed README for using it in other openSUSE projects.</li>
 </ul>
-</div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="text-center py-5 bg-dark text-light" id="theme-doc-footer"><div class="container">&copy; 2017-2020 openSUSE Contributors</div></footer><script src="./dist/js/chameleon.js"></script><script src="./lib/highlight.js"></script><script>hljs.initHighlightingOnLoad();</script><script src="./lib/doc.js"></script></body></html>
+</div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="footer"><div class="container">&copy; 2017-2020 openSUSE Contributors</div></footer><script src="./dist/js/chameleon.js"></script><script src="./lib/highlight.js"></script><script>hljs.initHighlightingOnLoad();</script><script src="./lib/doc.js"></script></body></html>
