--- a/components.html
+++ b/components.html
@@ -52,5 +52,54 @@
 to use all of them. Instead, you should use as less variants as possible.</p><p>Only the following color variants are recommended:</p><h3 id="buttons-filled">Filled</h3><div class="my-3"><button class="btn btn-primary">Primary</button>
 <button class="btn btn-secondary">Secondary</button>
 <button class="btn btn-danger">Danger</button>
-<button class="btn btn-link">Link</button></div><h3 id="buttons-bordered">Bordered</h3><h2 id="cards">Cards</h2><div class="row"><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/leap-green.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/logo-gray.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/tumbleweed-green.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div></div><h2 id="inputs">Inputs</h2><p>Text, search, email, password inputs have the same appearance. They are just
-single element components.</p><div class="mb-3"><input class="form-control mb-3" type="text" placeholder="Text input"><textarea class="form-control" placeholder="Textarea"></textarea></div><p>Selects, checkboxs, radio buttons and file inputs should use custom control.</p><div class="mb-3"><div class="custom-control custom-checkbox mb-3"><input class="custom-control-input" id="custom-check-1" type="checkbox" checked><label class="custom-control-label" for="custom-check-1">Checkbox 1</label></div><div class="custom-control custom-checkbox mb-3"><input class="custom-control-input" id="custom-check-2" type="checkbox"><label class="custom-control-label" for="custom-check-2">Checkbox 2</label></div><div class="custom-control custom-radio mb-3"><input class="custom-control-input" id="custom-radio-1" type="radio" name="custom-radio-1" value="1" checked><label class="custom-control-label" for="custom-radio-1">Radio button 1</label></div><div class="custom-control custom-radio mb-3"><input class="custom-control-input" id="custom-radio-2" type="radio" name="custom-radio-1" value="2"><label class="custom-control-label" for="custom-radio-2">Radio button 2</label></div><select class="custom-select mb-3"><option>gedit</option><option>emacs</option><option>kate</option><option selected>nano</option><option>vim</option></select><div class="custom-file"><input class="custom-file-input" id="custom-file-1" type="file"><label class="custom-file-label" for="custom-file-1">Choose file</label></div></div><h2>List Group</h2><p>Please don't use contextual classes.</p><ul class="list-group"><li class="list-group-item active">Cras justo odio</li><li class="list-group-item">Dapibus ac facilisis in</li><li class="list-group-item">Morbi leo risus</li><li class="list-group-item">Porta ac consectetur ac</li><li class="list-group-item">Vestibulum at eros</li></ul><h2>Modals</h2><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><div class="modal-title">Modal title</div><button class="close" data-dismiss="modal">&times;</button></div><div class="modal-body"><p>Modal body text goes here.</p></div><div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal">Close</button><button class="btn btn-primary">Save changes</button></div></div></div></div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="footer"><div class="container">&copy; 2017-2020 openSUSE Contributors</div></footer><script src="./dist/js/chameleon.js"></script><script src="./lib/highlight.js"></script><script>hljs.initHighlightingOnLoad();</script><script src="./lib/doc.js"></script></body></html>
+<button class="btn btn-link">Link</button></div><h3 id="buttons-bordered">Bordered</h3><h2 id="cards">Cards</h2><div class="row"><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/leap-green.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/logo-gray.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/tumbleweed-green.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div></div><h2>Footer</h2>
+<h3>With only copyright information</h3>
+<footer class="footer">
+  <div class="container">
+    &copy; 2011-2020 openSUSE contributors
+  </div>
+</footer>
+<hr>
+<pre><code class="language-html">&lt;footer class=&quot;footer&quot;&gt;
+  &lt;div class=&quot;container&quot;&gt;
+    &amp;copy; 2011-2020 openSUSE contributors
+  &lt;/div&gt;
+&lt;/footer&gt;
+</code></pre>
+<h3>With links</h3>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        &copy; 2011-2020 openSUSE contributors
+      </div>
+      <div class="col-sm-6 text-sm-right">
+        <ul class="list-inline mb-0">
+          <li class="list-inline-item"><a href="#">Source code</a></li>
+          <li class="list-inline-item"><a href="#">Privacy</a></li>
+          <li class="list-inline-item"><a href="#">Support</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+<hr>
+<pre><code class="language-html">&lt;footer class=&quot;footer&quot;&gt;
+  &lt;div class=&quot;container&quot;&gt;
+    &lt;div class=&quot;row&quot;&gt;
+      &lt;div class=&quot;col-sm-6&quot;&gt;
+        &amp;copy; 2011-2020 openSUSE contributors
+      &lt;/div&gt;
+      &lt;div class=&quot;col-sm-6 text-sm-right&quot;&gt;
+        &lt;ul class=&quot;list-inline mb-0&quot;&gt;
+          &lt;li class=&quot;list-inline-item&quot;&gt;&lt;a href=&quot;#&quot;&gt;Source code&lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;list-inline-item&quot;&gt;&lt;a href=&quot;#&quot;&gt;Privacy&lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;list-inline-item&quot;&gt;&lt;a href=&quot;#&quot;&gt;Support&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/footer&gt;
+</code></pre>
+<h2 id="inputs">Inputs</h2><p>Text, search, email, password inputs have the same appearance. They are just
+single element components.</p><div class="mb-3"><input class="form-control mb-3" type="text" placeholder="Text input"><textarea class="form-control" placeholder="Textarea"></textarea></div><p>Selects, checkboxs, radio buttons and file inputs should use custom control.</p><div class="mb-3"><div class="custom-control custom-checkbox mb-3"><input class="custom-control-input" id="custom-check-1" type="checkbox" checked><label class="custom-control-label" for="custom-check-1">Checkbox 1</label></div><div class="custom-control custom-checkbox mb-3"><input class="custom-control-input" id="custom-check-2" type="checkbox"><label class="custom-control-label" for="custom-check-2">Checkbox 2</label></div><div class="custom-control custom-radio mb-3"><input class="custom-control-input" id="custom-radio-1" type="radio" name="custom-radio-1" value="1" checked><label class="custom-control-label" for="custom-radio-1">Radio button 1</label></div><div class="custom-control custom-radio mb-3"><input class="custom-control-input" id="custom-radio-2" type="radio" name="custom-radio-1" value="2"><label class="custom-control-label" for="custom-radio-2">Radio button 2</label></div><select class="custom-select mb-3"><option>gedit</option><option>emacs</option><option>kate</option><option selected>nano</option><option>vim</option></select><div class="custom-file"><input class="custom-file-input" id="custom-file-1" type="file"><label class="custom-file-label" for="custom-file-1">Choose file</label></div></div><h2>List Group</h2><p>Please don't use contextual classes.</p><ul class="list-group"><li class="list-group-item active">Cras justo odio</li><li class="list-group-item">Dapibus ac facilisis in</li><li class="list-group-item">Morbi leo risus</li><li class="list-group-item">Porta ac consectetur ac</li><li class="list-group-item">Vestibulum at eros</li></ul><h2>Modals</h2><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><div class="modal-title">Modal title</div><button class="close" data-dismiss="modal">&times;</button></div><div class="modal-body"><p>Modal body text goes here.</p></div><div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal">Close</button><button class="btn btn-primary">Save changes</button></div></div></div></div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="footer"><div class="container">&copy; 2017-2020 openSUSE contributors</div></footer><script src="./dist/js/chameleon.js"></script><script src="./lib/highlight.js"></script><script>hljs.initHighlightingOnLoad();</script><script src="./lib/doc.js"></script></body></html>
