wiki: split css build

--- a/components.html
+++ b/components.html
@@ -52,7 +52,36 @@
 to use all of them. Instead, you should use as less variants as possible.</p><p>Only the following color variants are recommended:</p><h3 id="buttons-filled">Filled</h3><div class="my-3"><button class="btn btn-primary">Primary</button>
 <button class="btn btn-secondary">Secondary</button>
 <button class="btn btn-danger">Danger</button>
-<button class="btn btn-link">Link</button></div><h3 id="buttons-bordered">Bordered</h3><h2 id="cards">Cards</h2><div class="row"><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/leap-green.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/logo-gray.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/tumbleweed-green.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div></div><h2>Footer</h2>
+<button class="btn btn-link">Link</button></div><h3 id="buttons-bordered">Bordered</h3><h2 id="cards">Cards</h2><div class="row"><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/leap-green.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/logo-gray.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div><div class="col-md-4"><div class="card"><img class="card-img-top" src="dist/images/logo/tumbleweed-green.png"><div class="card-body"><h5 class="card-title no-toc">Card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a></div></div></div></div><h2>Dropdowns</h2>
+<div class="dropdown my-3">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item active" href="#">Another action</a>
+    <a class="dropdown-item disabled" href="#">Something else here</a>
+  </div>
+</div>
+<pre><code class="language-html">&lt;div class=&quot;dropdown&quot;&gt;
+  &lt;button
+    class=&quot;btn btn-secondary dropdown-toggle&quot;
+    type=&quot;button&quot;
+    id=&quot;dropdownMenuButton&quot;
+    data-toggle=&quot;dropdown&quot;
+    aria-haspopup=&quot;true&quot;
+    aria-expanded=&quot;false&quot;
+  &gt;
+    Dropdown button
+  &lt;/button&gt;
+  &lt;div class=&quot;dropdown-menu&quot; aria-labelledby=&quot;dropdownMenuButton&quot;&gt;
+    &lt;a class=&quot;dropdown-item&quot; href=&quot;#&quot;&gt;Action&lt;/a&gt;
+    &lt;a class=&quot;dropdown-item active&quot; href=&quot;#&quot;&gt;Another action&lt;/a&gt;
+    &lt;a class=&quot;dropdown-item disabled&quot; href=&quot;#&quot;&gt;Something else here&lt;/a&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+<h2>Footer</h2>
 <h3>With only copyright information</h3>
 <footer class="footer">
   <div class="container">
