--- a/changelog.html
+++ b/changelog.html
@@ -2,26 +2,34 @@
 <p>All notable changes to this project will be documented in this file.</p>
 <p>The format is based on <a href="https://keepachangelog.com/en/1.0.0/">Keep a Changelog</a>,
 and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semantic Versioning</a>.</p>
-<h2><a href="https://github.com/openSUSE/chameleon/compare/v1.3.0...HEAD">Unreleased</a></h2>
+<h2><a href="https://github.com/openSUSE/chameleon/compare/v2.0.0...HEAD">Unreleased</a></h2>
+<h2><a href="https://github.com/openSUSE/chameleon/compare/v1.3.0...v2.0.0">2.0.0</a> - 2020-03-04</h2>
 <h3>Added</h3>
 <ul>
-<li>Language code pt, zh, zh-Hans, zh-Hant</li>
-<li>Dark mode</li>
-<li>Megamenu</li>
-<li>Table of content</li>
-<li>New icon set based on Remix Icon</li>
+<li>gulp, js: individual component js files</li>
+<li>gulp, js: split wiki js into chameleon-wiki.js</li>
+<li>gulp, css: split wiki js into chameleon-wiki.css</li>
+<li>icon: <em>Remix Icon</em> with openSUSE additional icons</li>
+<li>css: dark mode</li>
+<li>css,js: megamenu component</li>
+<li>css,js: table of content (toc) component</li>
+<li>l10n: more translations and language codes support</li>
+<li>wiki: heading anchors and edit buttons with icons</li>
 </ul>
 <h3>Chagned</h3>
 <ul>
-<li>Update to Bootstrap 4.4.1</li>
-<li>Use Source Sans Pro and Source Code Pro fonts</li>
-<li>Remove border-radius</li>
-<li>Colors follow <a href="https://opensuse.eosdesignsystem.com/colors">openSUSE Design System</a></li>
-<li>Alert component style</li>
+<li>npm: update bootstrap to 4.4.1</li>
+<li>gulp: don't minify/uglify css and js, so the code is more human readable</li>
+<li>font: use <em>Source Sans Pro</em> and <em>Source Code Pro</em> fonts</li>
+<li>css: disable border-radius</li>
+<li>css: colors follow <a href="https://opensuse.eosdesignsystem.com/colors">openSUSE Design System</a></li>
+<li>css: alert</li>
+<li>css: dropdown</li>
 </ul>
 <h3>Removed</h3>
 <ul>
-<li><strong>BREAKING CHANGE</strong>: Typicons (use RemixIcons instead)</li>
+<li>icon: <em>Typicons</em>. <strong>BREAKING CHANGE</strong>: use <em>Remix Icon</em> instead</li>
+<li>font: removed <em>Open Sans</em> fonts. Use <em>Source Sans Pro</em> instead</li>
 </ul>
 <h2><a href="https://github.com/openSUSE/chameleon/compare/v1.2.0...v1.3.0">1.3.0</a> - 2019-03-02</h2>
 <h3>Added</h3>
