--- a/get-started.html
+++ b/get-started.html
@@ -5,26 +5,26 @@ webpage loading speed. This is the most recommended way to use Chameleon.</p>
 <pre><code class="language-html">&lt;!-- Chameleon Style --&gt;
 &lt;link
   rel=&quot;stylesheet&quot;
-  href=&quot;https://static.opensuse.org/chameleon/dist/css/chameleon.css&quot;
+  href=&quot;https://static.opensuse.org/chameleon-2.0/dist/css/chameleon.css&quot;
 /&gt;
 
 &lt;!-- Chameleon Script Bundled with jQuery and Bootstrap --&gt;
 &lt;script
-  src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon.js&quot;
+  src=&quot;https://static.opensuse.org/chameleon-2.0/dist/js/chameleon.js&quot;
   defer
 &gt;&lt;/script&gt;
 </code></pre>
 <p>If the website (WordPress, MediaWiki, etc.) already provides jQuery:</p>
 <pre><code class="language-html">&lt;!-- Chameleon Script Bundled with Bootstrap --&gt;
 &lt;script
-  src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon-no-jquery.js&quot;
+  src=&quot;https://static.opensuse.org/chameleon-2.0/dist/js/chameleon-no-jquery.js&quot;
   defer
 &gt;&lt;/script&gt;
 </code></pre>
 <p>If the website (for Weblate, etc.) already provides jQuery and Bootstrap 4:</p>
 <pre><code class="language-html">&lt;!-- Chameleon Script --&gt;
 &lt;script
-  src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon-no-bootstrap.js&quot;
+  src=&quot;https://static.opensuse.org/chameleon-2.0/dist/js/chameleon-no-bootstrap.js&quot;
   defer
 &gt;&lt;/script&gt;
 </code></pre>
