--- a/changelog.html
+++ b/changelog.html
@@ -3,6 +3,11 @@
 <p>The format is based on <a href="https://keepachangelog.com/en/1.0.0/">Keep a Changelog</a>,
 and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semantic Versioning</a>.</p>
 <h2><a href="https://github.com/openSUSE/chameleon/compare/v2.0.0...HEAD">Unreleased</a></h2>
+<h2>Changed</h2>
+<ul>
+<li>js: <code>jquery.js</code> and <code>bootstrap.js</code> are not bundled anymore <strong>BREAKING CHANGE</strong></li>
+<li>js,icon: optimize size</li>
+</ul>
 <h2><a href="https://github.com/openSUSE/chameleon/compare/v1.3.0...v2.0.0">2.0.0</a> - 2020-03-04</h2>
 <h3>Added</h3>
 <ul>
@@ -89,4 +94,4 @@ needed.</li>
 <li>Brazilian Portuguese translation from openSUSE contributors.</li>
 <li>Detailed README for using it in other openSUSE projects.</li>
 </ul>
-</div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="footer"><div class="container">&copy; 2017&ndash;2020 openSUSE contributors</div></footer><script src="./dist/js/chameleon.js"></script><script src="./lib/highlight.js"></script><script>hljs.initHighlightingOnLoad();</script><script src="./lib/doc.js"></script></body></html>
+</div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="footer"><div class="container">&copy; 2017&ndash;2020 openSUSE contributors</div></footer><script src="./dist/js/jquery.slim.js"></script><script src="./dist/js/bootstrap.bundle.js"></script><script src="./dist/js/chameleon.js"></script><script src="./lib/highlight.js"></script><script src="./lib/doc.js"></script></body></html>
