css: fix table colors in dark mode

--- a/changelog.html
+++ b/changelog.html
@@ -8,6 +8,10 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>js: <code>jquery.js</code> and <code>bootstrap.js</code> are not bundled anymore <strong>BREAKING CHANGE</strong></li>
 <li>js,icon: optimize size</li>
 </ul>
+<h2>Fixed</h2>
+<ul>
+<li>css: table colors in dark mode</li>
+</ul>
 <h2><a href="https://github.com/openSUSE/chameleon/compare/v1.3.0...v2.0.0">2.0.0</a> - 2020-03-04</h2>
 <h3>Added</h3>
 <ul>
