improve dark theme background

--- a/changelog.html
+++ b/changelog.html
@@ -109,4 +109,4 @@ needed.</li>
 <li>Brazilian Portuguese translation from openSUSE contributors.</li>
 <li>Detailed README for using it in other openSUSE projects.</li>
 </ul>
-</div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="footer"><div class="container">&copy; 2017&ndash;2020 openSUSE contributors</div></footer><script src="./dist/js/jquery.slim.js"></script><script src="./dist/js/bootstrap.bundle.js"></script><script src="./dist/js/chameleon.js"></script><script src="./dist/js/highlight.js"></script><script src="./docs/js/doc.js"></script></body></html>
+</div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="footer"><div class="container">&copy; 2017&ndash;2020 openSUSE contributors</div></footer><script src="./dist/js/jquery.slim.js"></script><script src="./dist/js/bootstrap.bundle.js"></script><script src="./dist/js/chameleon.js"></script><script src="./docs/js/doc.js"></script></body></html>
